--- a/themes/custom/mha_res/css/screen.css
+++ b/themes/custom/mha_res/css/screen.css
@@ -216,7 +216,7 @@ p {
 .front .pane-events .views-row,
 .front .pane-news .views-row {
   border-bottom: 1px solid #ddd;
-  padding: 20px 0px;
+  padding-bottom: 20px;
   margin-bottom: 20px; }
 /* line 181, ../sass/screen.scss */
 .front .pane-events .views-row:first-child,
@@ -524,14 +524,19 @@ strong {
 .page-user .user-expiry {
   margin-top: 20px; }
 
-/* line 515, ../sass/screen.scss */
-.view-id-events .view-display-id-block .date-display-single {
+/* line 514, ../sass/screen.scss */
+.view-id-events.view-display-id-block .date-display-single {
   font-weight: bold;
-  margin-bottom: 1em; }
+  line-height: 2em; }
 
-/* line 523, ../sass/screen.scss */
-.front .pane-block-1 h2 {
-  margin-bottom: 1em; }
-/* line 527, ../sass/screen.scss */
+/* line 521, ../sass/screen.scss */
+.front .pane-block-1 .pane-content {
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
+/* line 530, ../sass/screen.scss */
 .front .pane-block-12 {
   margin-bottom: 20px; }
