--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -175,7 +175,7 @@ p{
   .pane-news{
     .views-row{
       border-bottom: 1px solid #ddd;
-      padding: 20px 0px;
+      padding-bottom: 20px;
       margin-bottom: 20px;
     }
     .views-row:first-child{
@@ -510,18 +510,21 @@ strong{
     margin-top: 20px;
   }
 }
-.view-id-events{
-  .view-display-id-block{
-    .date-display-single{
-      font-weight: bold;
-      margin-bottom: 1em;
-    }
+.view-id-events.view-display-id-block{
+  .date-display-single{
+    font-weight: bold;
+    line-height: 2em;
   }
 }
 .front{
   .pane-block-1{
-    h2{
-      margin-bottom: 1em;
+    .pane-content{
+      padding: 20px;
+      background-color: #f5f5f5;
+      border: 1px solid #e3e3e3;
+      border-radius: 4px;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
     }
   }
   .pane-block-12{
