--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -12,6 +12,9 @@ h1{
   color: #B01C2E;
   font-size: 1.7em;
 }
+a{
+  color: #B01C2E;
+}
 .region-content{
   h2{
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -412,6 +415,13 @@ strong{
     background:  #5cb85c;
   }
 }
+.logged-in{
+  .navbar-collapse{
+    a[href*="membership/apply"]{
+      display: none;
+    }
+  }
+}
 .caret{
   display: none !important;
 }
@@ -526,8 +536,23 @@ strong{
       -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
       box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
     }
+    margin-bottom: 20px;
   }
   .pane-block-12{
     margin-bottom: 20px;
+  }
+  .pane-block-14{
+    .pane-content{
+      padding: 20px;
+      background-color: #f5f5f5;
+      border: 1px solid #e3e3e3;
+      border-radius: 4px;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+      line-height: 2em;
+      img{
+        float: left;
+      }
+    }
   }
 }
