--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -556,3 +556,12 @@ strong{
     }
   }
 }
+.view-id-news.view-display-id-page{
+  .views-field-title{
+    margin: 0.5em 0;
+  }
+}
+.field-name-field-images,
+.field-name-field-image{
+  margin-bottom: 1em;
+}
